syntax = "proto3";

package api;

option go_package = "./pkg/api";


service BookV1 {
    rpc GetAll (EmptyBook) returns (BookList){}
    rpc Get (BookId) returns (Book){}
    rpc Insert (Book) returns (Book){}
    rpc Update (Book) returns (Book){}
    rpc Remove (BookId) returns (Book){}
}

message EmptyBook {}

message Book {
    string id = 1;
    string name = 2;
    string author = 3;
}

message BookList {
    repeated Book books = 1;
}

message BookId {
    string id = 1;
}



